# xkcd-password-gen

./: .gitignore  Cargo.toml  README.md  build.rs  clippy.toml  planning.md  run_bench.sh
.github/workflows/: audit.yml  build-release-macos.yml  build-release.yml  integration.yml
benchmarks/: 124be11.md  3201453.md  71a44f2.md  README.md  c178961.md  ed41b65.md  hyperfine_8fc38df.md  hyperfine_b08a313.md  hyperfine_bb2edf4.md
config-builder-derive/: Cargo.toml
config-builder-derive/src/: lib.rs
src/: config.rs  consts.rs  lib.rs  main.rs  password_maker.rs  test_helpers.rs  types.rs  word_transformer.rs
src/gui/: main.rs
strenum/: Cargo.toml
strenum-derive/: Cargo.toml  expand
strenum-derive/src/: lib.rs
strenum/src/: lib.rs
