[package]
name = "xkcd-password-gen"
version = "0.1.0"
edition = "2024"
authors = ["Andrew Langmeier"]
description = "A memorable password generator inspired by XKCD 936"
repository = "https://github.com/Raymi306/xkcd-password-gen"
categories = ["command-line-utilities"]
keywords = ["xkcd", "password"]

[dependencies]
rand = "0.9"
getopts = "0.2"
config-builder-derive = { path = "config-builder-derive" }

[build-dependencies]
quote = "1.0"

[profile.small]
inherits = "release"
opt-level = "s"
debug = false
strip = true
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
opt-level = 3
debug = false
strip = true
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "unwind"
incremental = false
codegen-units = 1
rpath = false
