[workspace]
resolver = "2"
members = ["strenum-derive", "config-builder-derive"]

[workspace.package]
edition = "2024"
authors = ["Andrew Langmeier"]
repository = "https://github.com/Raymi306/xkcd-password-gen"
license = "AGPL-3.0-only"
readme = "README.md"

[package]
name = "xkcd-password-gen"
version = "1.0.0"
description = "A memorable password generator inspired by XKCD 936"
categories = ["command-line-utilities"]
keywords = ["xkcd", "password"]
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
rand = "0.9"
rand_core = "0.9"
getopts = "0.2"
config-builder-derive = { path = "config-builder-derive" }
strenum-derive = { path = "strenum-derive" }

[build-dependencies]
quote = "1.0"

[workspace.lints.rust]
unsafe_code = { level = "deny", priority = 0 }
missing_docs = { level = "deny", priority = 0 }

[workspace.lints.clippy]
nursery = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1}
cargo = { level = "warn", priority = -1 }
allow_attributes = { level = "forbid", priority = 0 }
allow_attributes_without_reason = { level = "forbid", priority = 0 }
unwrap_used = { level = "deny", priority = 0 }

[profile.small]
inherits = "release"
opt-level = "s"
debug = false
strip = true
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
opt-level = 3
debug = false
strip = true
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "unwind"
incremental = false
codegen-units = 1
rpath = false
