[package]
name = "config-builder-derive"
version = "0.1.0"
edition = "2024"
authors = ["Andrew Langmeier"]

[dependencies]
syn = "2.0"
quote = "1.0"

[lib]
proc-macro = true

[lints.rust]
unsafe_code = { level = "deny", priority = 0 }

[lints.clippy]
style = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1}
nursery = { level = "warn", priority = -1 }
unwrap_used = { level = "deny", priority = 0 }
