[package]
publish = false
name = "config-builder-derive"
description = "Reinventing the wheel"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
readme = false

[dependencies]
syn = "2.0"
quote = "1.0"

[lib]
proc-macro = true

[lints]
workspace = true
