[package]
publish = false
name = "strenum-derive"
version = "0.1.0"
description = "Reinventing the wheel"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
readme = false

[dependencies]
syn = "2.0"
quote = "1.0"
stringcase = "0.4"

[lib]
proc-macro = true

[lints]
workspace = true
